--- a/dev/templates/favorite.html
+++ b/dev/templates/favorite.html
@@ -266,151 +266,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-xl-6 c-product-list__item">
-                        <div class="align-items-center c-product-card_left-control c-product-card c-product-card_lg c-product-card_bordered c-product-card_events">
-                            <div class="c-checkbox-primary">
-                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox"
-                                       type="checkbox">
-                                <label class="c-label mb-0" for="example-checkbox"></label>
-                            </div>
-                            <a class="c-product-card__preview" href="#">
-                                <img alt="" src="images/cupboard.png">
-                            </a>
-                            <div class="c-product-card__body">
-                                <div class="c-product-card__description">
-                                    <div class="c-product-desc">
-                                        <a class="c-product-desc__text c-product-desc__item" href="#"> 19"
-                                            Напольный
-                                            серверный шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе,
-                                            двери
-                                            передняя перфорированная, задние двойные перфорированные, боковые
-                                            стенки,
-                                            регулируемые опоры, ролики, RAL 9005 </a>
-                                        <div class="c-product-desc__articul c-product-desc__item">
-                                            343423426524345
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <div class="c-product-card__controls">
-                                    <div class="c-product-controls">
-                                        <div class="c-product-controls__body">
-                                            <div class="c-product-controls__counter c-input-counter">
-                                                <input class="c-input-counter__input c-input c-input_md c-input_style-secondary c-input_color-primary"
-                                                       type="text" value="1">
-                                                <button class="c-input-counter__left-ctrl" type="button">-
-                                                </button>
-                                                <button class="c-input-counter__right-ctrl" type="button">+
-                                                </button>
-                                            </div>
-                                            <a class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                               data-basket-btn
-                                               href="#popup-form"> В корзину
-                                            </a>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-xl-6 c-product-list__item">
-                        <div class="align-items-center c-product-card_left-control c-product-card c-product-card_lg c-product-card_bordered c-product-card_events">
-                            <div class="c-checkbox-primary">
-                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox"
-                                       type="checkbox">
-                                <label class="c-label mb-0" for="example-checkbox"></label>
-                            </div>
-                            <a class="c-product-card__preview" href="#">
-                                <img alt="" src="images/cupboard.png">
-                            </a>
-                            <div class="c-product-card__body">
-                                <div class="c-product-card__description">
-                                    <div class="c-product-desc">
-                                        <a class="c-product-desc__text c-product-desc__item" href="#"> 19"
-                                            Напольный
-                                            серверный шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе,
-                                            двери
-                                            передняя перфорированная, задние двойные перфорированные, боковые
-                                            стенки,
-                                            регулируемые опоры, ролики, RAL 9005 </a>
-                                        <div class="c-product-desc__articul c-product-desc__item">
-                                            343423426524345
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <div class="c-product-card__controls">
-                                    <div class="c-product-controls">
-                                        <div class="c-product-controls__body">
-                                            <div class="c-product-controls__counter c-input-counter">
-                                                <input class="c-input-counter__input c-input c-input_md c-input_style-secondary c-input_color-primary"
-                                                       type="text" value="1">
-                                                <button class="c-input-counter__left-ctrl" type="button">-
-                                                </button>
-                                                <button class="c-input-counter__right-ctrl" type="button">+
-                                                </button>
-                                            </div>
-                                            <a class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                               data-basket-btn
-                                               href="#popup-form"> В корзину
-                                            </a>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-xl-6 c-product-list__item">
-                        <div class="align-items-center c-product-card_left-control c-product-card c-product-card_lg c-product-card_bordered c-product-card_events">
-                            <div class="c-checkbox-primary">
-                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox"
-                                       type="checkbox">
-                                <label class="c-label mb-0" for="example-checkbox"></label>
-                            </div>
-                            <a class="c-product-card__preview" href="#">
-                                <img alt="" src="images/cupboard.png">
-                            </a>
-                            <div class="c-product-card__body">
-                                <div class="c-product-card__description">
-                                    <div class="c-product-desc">
-                                        <a class="c-product-desc__text c-product-desc__item" href="#"> 19"
-                                            Напольный
-                                            серверный шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе,
-                                            двери
-                                            передняя перфорированная, задние двойные перфорированные, боковые
-                                            стенки,
-                                            регулируемые опоры, ролики, RAL 9005 </a>
-                                        <div class="c-product-desc__articul c-product-desc__item">
-                                            343423426524345
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <div class="c-product-card__controls">
-                                    <div class="c-product-controls">
-                                        <div class="c-product-controls__body">
-                                            <div class="c-product-controls__counter c-input-counter">
-                                                <input class="c-input-counter__input c-input c-input_md c-input_style-secondary c-input_color-primary"
-                                                       type="text" value="1">
-                                                <button class="c-input-counter__left-ctrl" type="button">-
-                                                </button>
-                                                <button class="c-input-counter__right-ctrl" type="button">+
-                                                </button>
-                                            </div>
-                                            <a class="c-product-controls__basket c-btn c-btn_style-default c-btn_color-primary c-btn_sm"
-                                               data-basket-btn
-                                               href="#popup-form"> В корзину
-                                            </a>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    </div> 4
                 </div>
             </div>
         </div>
