--- a/dev/scss/components/_section.scss
+++ b/dev/scss/components/_section.scss
@@ -7,6 +7,9 @@
   &_md {
     padding-top: 25px;
     padding-bottom: 25px;
+    & .c-section__header{
+      margin-bottom: 30px;
+    }
   }
 
   &_lg {
