--- a/dev/templates/lk-spec.html
+++ b/dev/templates/lk-spec.html
@@ -155,7 +155,7 @@
                 </a>
             </div>
         </div>
-        <div class="c-specifications-section c-specifications-section_bordered">
+        <div class="c-specifications-section c-specifications-section_bordered"> 2
             <div class="c-specifications-section__header">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-auto">
@@ -184,263 +184,13 @@
                                     </svg>
                                 </button>
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
             <div class="c-specifications-section__list">
                 <div class="c-product-list c-product-list_lg c-product-list_bordered row">
-                    <div class="col-12  c-product-list__item">
-                        <div class="align-items-center c-product-card_left-control  c-product-card c-product-card_lg ">
-                            <div class="c-checkbox-primary">
-                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox" type="checkbox">
-                                <label class="c-label mb-0" for="example-checkbox"></label>
-                            </div>
-                            <a class="c-product-card__preview" href="#">
-                                <img alt="" src="images/cupboard.png">
-                            </a>
-                            <div class="c-product-card__body d-flex p-0">
-                                <div class="c-product-card__description">
-                                    <div class="c-product-desc">
-                                        <a class="c-product-desc__text c-product-desc__item" href="#"> 19" Напольный
-                                            серверный шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе, двери
-                                            передняя перфорированная, задние двойные перфорированные, боковые
-                                            стенки,
-                                            регулируемые опоры, ролики, RAL 9005 </a>
-                                        <div class="c-product-desc__articul c-product-desc__item"> 343423426524345
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="c-icon-list">
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#close"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="20" width="22" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#favorite"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12  c-product-list__item">
-                        <div class="align-items-center c-product-card_left-control  c-product-card c-product-card_lg ">
-                            <div class="c-checkbox-primary">
-                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox" type="checkbox">
-                                <label class="c-label mb-0" for="example-checkbox"></label>
-                            </div>
-                            <a class="c-product-card__preview" href="#">
-                                <img alt="" src="images/cupboard.png">
-                            </a>
-                            <div class="c-product-card__body d-flex p-0">
-                                <div class="c-product-card__description">
-                                    <div class="c-product-desc">
-                                        <a class="c-product-desc__text c-product-desc__item" href="#"> 19" Напольный
-                                            серверный шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе, двери
-                                            передняя перфорированная, задние двойные перфорированные, боковые
-                                            стенки,
-                                            регулируемые опоры, ролики, RAL 9005 </a>
-                                        <div class="c-product-desc__articul c-product-desc__item"> 343423426524345
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="c-icon-list">
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#close"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="20" width="22" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#favorite"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12  c-product-list__item">
-                        <div class="align-items-center c-product-card_left-control  c-product-card c-product-card_lg ">
-                            <div class="c-checkbox-primary">
-                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox" type="checkbox">
-                                <label class="c-label mb-0" for="example-checkbox"></label>
-                            </div>
-                            <a class="c-product-card__preview" href="#">
-                                <img alt="" src="images/cupboard.png">
-                            </a>
-                            <div class="c-product-card__body d-flex p-0">
-                                <div class="c-product-card__description">
-                                    <div class="c-product-desc">
-                                        <a class="c-product-desc__text c-product-desc__item" href="#"> 19" Напольный
-                                            серверный шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе, двери
-                                            передняя перфорированная, задние двойные перфорированные, боковые
-                                            стенки,
-                                            регулируемые опоры, ролики, RAL 9005 </a>
-                                        <div class="c-product-desc__articul c-product-desc__item"> 343423426524345
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="c-icon-list">
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#close"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="20" width="22" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#favorite"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="c-specifications-section c-specifications-section_bordered">
-            <div class="c-specifications-section__header">
-                <div class="row align-items-center justify-content-between">
-                    <div class="col-auto">
-                        <h2 class="c-specifications-section__title">Название списка</h2>
-                    </div>
-                    <div class="col-auto">
-                        <div class="c-specifications-section__actions">
-                            <div class="c-specifications-section__action">
-                                <button class="c-btn c-btn_product-action" type="button">
-                                    <svg fill="none" height="24" viewBox="0 0 24 24" width="24"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <use xlink:href="images/svg.svg#pencil"
-                                             xmlns="http://www.w3.org/1999/xlink"></use>
-                                    </svg>
-                                </button>
-                            </div>
-                            <div class="c-specifications-section__action">
-                                <button class="c-btn c-btn_product-action" type="button">
-                                    <svg fill="none" height="24" viewBox="0 0 24 24" width="24"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <svg fill="none" height="24" viewBox="0 0 24 24" width="24"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <use xlink:href="images/svg.svg#reload"
-                                                 xmlns="http://www.w3.org/1999/xlink"></use>
-                                        </svg>
-                                    </svg>
-                                </button>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="c-specifications-section__list">
-                <div class="c-product-list c-product-list_lg c-product-list_bordered row">
-                    <div class="col-12  c-product-list__item">
-                        <div class="align-items-center c-product-card_left-control  c-product-card c-product-card_lg ">
-                            <div class="c-checkbox-primary">
-                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox" type="checkbox">
-                                <label class="c-label mb-0" for="example-checkbox"></label>
-                            </div>
-                            <a class="c-product-card__preview" href="#">
-                                <img alt="" src="images/cupboard.png">
-                            </a>
-                            <div class="c-product-card__body d-flex p-0">
-                                <div class="c-product-card__description">
-                                    <div class="c-product-desc">
-                                        <a class="c-product-desc__text c-product-desc__item" href="#"> 19" Напольный
-                                            серверный шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе, двери
-                                            передняя перфорированная, задние двойные перфорированные, боковые
-                                            стенки,
-                                            регулируемые опоры, ролики, RAL 9005 </a>
-                                        <div class="c-product-desc__articul c-product-desc__item"> 343423426524345
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="c-icon-list">
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#close"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="20" width="22" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#favorite"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12  c-product-list__item">
-                        <div class="align-items-center c-product-card_left-control  c-product-card c-product-card_lg ">
-                            <div class="c-checkbox-primary">
-                                <input class="c-checkbox c-checkbox_primary" id="example-checkbox" type="checkbox">
-                                <label class="c-label mb-0" for="example-checkbox"></label>
-                            </div>
-                            <a class="c-product-card__preview" href="#">
-                                <img alt="" src="images/cupboard.png">
-                            </a>
-                            <div class="c-product-card__body d-flex p-0">
-                                <div class="c-product-card__description">
-                                    <div class="c-product-desc">
-                                        <a class="c-product-desc__text c-product-desc__item" href="#"> 19" Напольный
-                                            серверный шкаф NTSS ПРОЦОД МАСТЕР 47U 800х1200 мм сварной в сборе, двери
-                                            передняя перфорированная, задние двойные перфорированные, боковые
-                                            стенки,
-                                            регулируемые опоры, ролики, RAL 9005 </a>
-                                        <div class="c-product-desc__articul c-product-desc__item"> 343423426524345
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="c-icon-list">
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#close"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                    <div class="c-icon-list__item">
-                                        <button class="c-btn c-btn_product-action" type="button">
-                                            <svg fill="none" height="20" width="22" xmlns="http://www.w3.org/2000/svg">
-                                                <use xlink:href="images/svg.svg#favorite"
-                                                     xmlns="http://www.w3.org/1999/xlink"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12  c-product-list__item">
+                    <div class="col-12  c-product-list__item"> 3
                         <div class="align-items-center c-product-card_left-control  c-product-card c-product-card_lg ">
                             <div class="c-checkbox-primary">
                                 <input class="c-checkbox c-checkbox_primary" id="example-checkbox" type="checkbox">
