--- a/dev/scss/template_styles.scss
+++ b/dev/scss/template_styles.scss
@@ -36,6 +36,16 @@
 @import "components/forms";
 @import "components/iframe";
 @import "components/breadcrumbs";
+@import "components/alert";
+@import "components/banners";
+@import "components/lists";
+@import "components/modals";
+@import "components/news";
+@import "components/pagination";
+@import "components/product";
+@import "components/slider";
+@import "components/tabs";
+@import "components/utilities";
 
 
 @import "layout/page";
