--- a/dev/scss/components/_cards.scss
+++ b/dev/scss/components/_cards.scss
@@ -211,12 +211,51 @@
     }
   }
 
-
+  &_lg.c-product-card_card-detail {
+    .c-product-desc__text {
+      font-size: 20px;
+      line-height: 1.4;
+      height: 5.6em;
+    }
+    .c-product-desc__articul{
+      font-size: 16px;
+      line-height: 20px;
+      font-weight: 500;
+    }
+    .c-product-price{
+      font-weight: 500;
+      font-size: 30px;
+      line-height: 1.4;
+    }
+    .c-product-controls_lg{
+      flex-direction: column;
+      align-items: center;
+      .c-product-controls__body{
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
+    }
+    .c-product-card__preview{
+      flex-basis: 560px;
+      height: 514px;
+      max-width: 100%;
+      max-height: 100%;
+    }
+    .c-product-card__description{
+      margin-bottom: 30px;
+    }
+    .c-product-desc__price.c-product-desc__item{
+      margin-top: 20px;
+    }
+    .c-product-card__preview-img{
+      width: 100%;
+    }
+  }
   &_lg {
     display: flex;
     border-radius: 18px;
     padding: 20px;
-
     .c-product-card__actions {
       top: 20px;
       right: 20px;
@@ -264,7 +303,6 @@
         max-width: 100%;
       }
     }
-
   }
 
 }
